enum PowerState {
  POWER_OFF = 0;
  POWER_ON = 1;
}

enum CommandStatus {
  SUCCESS = 0;
  FAILURE = 1;
  TIMEOUT = 2;
  INVALID = 3;
}

message SetPower {
  required PowerState power_state = 1;
}

message GetPower {}

enum InputState {
  DTV = 0;
  ANALOG = 1;
  AV1 = 2;
  AV2 = 3;
  COMP1 = 4;
  COMP2 = 5;
  PC = 7;
  HDMI1 = 8;
  HDMI2 = 9;
}

message SetInput {
  required InputState input_state = 1;
}

message GetInput {}

message Command {
  optional GetPower get_power = 1;
  optional SetPower set_power = 2;
  optional GetInput get_input = 3;
  optional SetInput set_input = 4;
}

message CommandResult {
  required CommandStatus command_status = 1;
  optional PowerState power_state = 2;
  optional InputState input_state = 3;
}
